app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginximage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginximage
  template:
    metadata:
      labels:
        app: nginximage
    spec:
      containers:
      - name: nginximage
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginximage-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginximage
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginximage2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginximage2 
  template:
    metadata:
      labels:
        app: nginximage2 
    spec:
      containers:
      - name: nginximage 
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginximage2-svc
  labels:
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginximage2
